--- a/paper/tex/casl.bib
+++ b/paper/tex/casl.bib
@@ -8931,7 +8931,6 @@
 	Author = {J. A. Sethian},
 	Date-Added = {2014-12-05 03:04:46 +0000},
 	Date-Modified = {2014-12-05 04:51:48 +0000},
-	Note = {Cambridge},
 	Publisher = {Cambridge University Press},
 	Title = {Level set methods and fast marching methods},
 	Year = 1999}
@@ -11593,7 +11592,7 @@
 	Year = {1977}}
 
 @book{Alexiades;Solomon:93:Mathematical-Modelin,
-	Address = {Washingotn, DC},
+	Address = {Washington, DC},
 	Author = {Alexiades, V and Solomon, A D},
 	Date-Modified = {2014-12-05 04:51:47 +0000},
 	Pages = {88--94},
@@ -16055,11 +16054,11 @@ The efficiency of algorithms which implement the scheme is considered. Computati
 	Author = {Sampath, Rahul S and Biros, George},
 	Date-Modified = {2014-12-05 04:51:48 +0000},
 	File = {:Users/fredericgibou1/Library/Application Support/Mendeley Desktop/Downloaded/b5124c2d6689d07ef0a620de3514c56c3ac5d2a5.pdf:pdf},
-	Journal = {SIAM J. of Scientific Comput.},
+	Journal = {SIAM Journal on Scientific Computing},
 	Keywords = {090747774,10,1137,65n30,65n50,65n55,65y05,68w10,68w15,adaptive,ams subject classifications,doi,finite element method,geometric multigrid,iterative solvers,linear octrees,matrix-free methods,meshes,meshing,parallel algorithms,tree codes},
 	Number = {3},
 	Pages = {1361--1392},
-	Title = {A parallel geometric multigrid method for finite elements on octree meshes, SIAM Journal on Scientific Computing},
+	Title = {A parallel geometric multigrid method for finite elements on octree meshes},
 	Volume = {32},
 	Year = {2010}}
 
