--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -89,6 +89,6 @@
 
 \bibliographystyle{plain}
 \addcontentsline{toc}{section}{\refname}
-\bibliography{casl,refs}
+\bibliography{casl,refs,bonn}
 
 \end{document}
