--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -10,24 +10,12 @@
 
 
 @misc{p4est-github,
+	Author = {C. Burstedde},
 	Date-Added = {2014-09-05 17:17:06 +0000},
 	Date-Modified = {2014-09-05 17:20:44 +0000},
 	Howpublished = {\url{http://p4est.github.io}},
 	url = {http://p4est.github.io},
 	Title = {\texttt{p4est}: {Parallel Adaptive Mesh Refinement on Forests of Octrees}}}
-
-
-@article{Sampath;Biros:10:A-parallel-geometric,
-	Author = {Sampath, Rahul S and Biros, George},
-	Date-Added = {2014-09-05 17:14:42 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {SIAM Journal on Scientific Computing},
-	Number = {3},
-	Pages = {1361--1392},
-	Publisher = {SIAM},
-	Title = {A parallel geometric multigrid method for finite elements on octree meshes},
-	Volume = {32},
-	Year = {2010}}
 
 @inproceedings{Sampath;Adavani;Sundar;etal:08:Dendro:-parallel-alg,
 	Author = {Sampath, Rahul S and Adavani, Santi S and Sundar, Hari and Lashuk, Ilya and Biros, George},
@@ -36,7 +24,7 @@
 	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE Press},
 	Pages = {18},
-	Title = {Dendro: parallel algorithms for multigrid and AMR methods on 2: 1 balanced octrees},
+	Title = {Dendro: parallel algorithms for multigrid and {AMR} methods on 2:1 balanced octrees},
 	Year = {2008}}
 
 @article{Campbell;Devine;Flaherty;etal:03:Dynamic-octree-load-,
@@ -75,7 +63,7 @@
 	Number = {2},
 	Pages = {129--150},
 	Publisher = {IOS Press},
-	Title = {The Zoltan and Isorropia parallel toolkits for combinatorial scientific computing: Partitioning, ordering and coloring},
+	Title = {The {Z}oltan and {I}sorropia parallel toolkits for combinatorial scientific computing: Partitioning, ordering and coloring},
 	Volume = {20},
 	Year = {2012}}
 
@@ -102,16 +90,6 @@
 	Title = {Parallel multilevel series k-way partitioning scheme for irregular graphs},
 	Volume = {41},
 	Year = {1999}}
-
-@article{Theillard;Gibou;Pollock:14:A-Sharp-Computationa,
-	Author = {Theillard, Maxime and Gibou, Fr{\'e}d{\'e}ric and Pollock, Tresa},
-	Date-Added = {2014-09-04 23:56:30 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {Journal of Scientific Computing},
-	Pages = {1--25},
-	Publisher = {Springer},
-	Title = {A Sharp Computational Method for the Simulation of the Solidification of Binary Alloys},
-	Year = {2014}}
 
 @article{Tsitsiklis:95:Efficient-algorithms,
 	Author = {Tsitsiklis, John N},
@@ -265,18 +243,6 @@
 	Title = {A parallel Heap-Cell Method for Eikonal equations},
 	Year = {2013}}
 
-@article{Jeong;Whitaker:08:A-fast-iterative-met,
-	Author = {Jeong, Won-Ki and Whitaker, Ross T},
-	Date-Added = {2014-09-03 18:11:09 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {SIAM Journal on Scientific Computing},
-	Number = {5},
-	Pages = {2512--2534},
-	Publisher = {SIAM},
-	Title = {A fast iterative method for eikonal equations},
-	Volume = {30},
-	Year = {2008}}
-
 @article{Zhao:05:A-fast-sweeping-meth,
 	Author = {Zhao, Hongkai},
 	Date-Added = {2014-09-03 18:11:08 +0000},
@@ -287,29 +253,6 @@
 	Title = {A fast sweeping method for eikonal equations},
 	Volume = {74},
 	Year = {2005}}
-
-@article{Detrixhe;Gibou;Min:13:A-parallel-fast-swee,
-	Author = {Detrixhe, Miles and Gibou, Fr{\'e}d{\'e}ric and Min, Chohong},
-	Date-Added = {2014-09-03 18:10:36 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {Journal of Computational Physics},
-	Pages = {46--55},
-	Publisher = {Elsevier},
-	Title = {A parallel fast sweeping method for the eikonal equation},
-	Volume = {237},
-	Year = {2013}}
-
-@article{Zhao:07:Parallel-implementat,
-	Author = {Zhao, Hongkai},
-	Date-Added = {2014-09-03 18:10:19 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {JOURNAL OF COMPUTATIONAL MATHEMATICS-INTERNATIONAL EDITION-},
-	Number = {4},
-	Pages = {421},
-	Publisher = {SCIENCE PRESS},
-	Title = {Parallel implementations of the fast sweeping method},
-	Volume = {25},
-	Year = {2007}}
 
 @article{Breus;Cristiani;Gwosdek;etal:11:An-adaptive-domain-d,
 	Author = {Breu{\ss}, Michael and Cristiani, Emiliano and Gwosdek, Pascal and Vogel, Oliver},
@@ -479,25 +422,13 @@
 
 @inproceedings{Tu;OHallaron;Ghattas:05:Scalable-parallel-oc,
 	Author = {Tu, Tiankai and O'Hallaron, David R and Ghattas, Omar},
-	Booktitle = {Supercomputing, 2005. Proceedings of the ACM/IEEE SC 2005 Conference},
+        Booktitle = {SC '05: Proceedings of the International Conference
+	            for High Performance Computing, Networking, Storage, and Analysis},
 	Date-Added = {2014-09-03 00:28:11 +0000},
 	Date-Modified = {2014-09-05 17:14:46 +0000},
 	Organization = {IEEE},
-	Pages = {4--4},
 	Title = {Scalable parallel octree meshing for terascale applications},
 	Year = {2005}}
-
-@article{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-algo,
-	Author = {Burstedde, Carsten and Wilcox, Lucas C and Ghattas, Omar},
-	Date-Added = {2014-09-03 00:26:34 +0000},
-	Date-Modified = {2014-09-05 17:14:46 +0000},
-	Journal = {SIAM Journal on Scientific Computing},
-	Number = {3},
-	Pages = {1103--1133},
-	Publisher = {SIAM},
-	Title = {p4est: Scalable algorithms for parallel adaptive mesh refinement on forests of octrees},
-	Volume = {33},
-	Year = {2011}}
 
 @misc{Balay;Abhyankar;Adams;etal:14:PETSc-Web-page,
 	Author = {Satish Balay and Shrirang Abhyankar and Mark~F. Adams and Jed Brown and Peter Brune and Kris Buschelman and Victor Eijkhout and William~D. Gropp and Dinesh Kaushik and Matthew~G. Knepley and Lois Curfman McInnes and Karl Rupp and Barry~F. Smith and Hong Zhang},
